--- a/index.css
+++ b/index.css
@@ -57,9 +57,10 @@ form {
     width: 80%;
 }
 
-/* .form-container {
-    display: flex;
-} */
+.form-container {
+    position: relative;
+    top: -1em;
+}
 
 form input {
     background-color: #2E2E2F;
