--- a/index.css
+++ b/index.css
@@ -114,7 +114,11 @@ form button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #2E2E2F;
+    color: #787878;;
+}
+
+.hidden {
+    display: none;
 }
 
 .default-txt i {
@@ -136,17 +140,16 @@ form button {
 
 .default-txt,
 .search-error {
-    margin-top: 50%;
-    margin: 50% auto 0;
+    margin: 30% auto;
 }
 
 .movie-container {
-    margin-top: 1.75em;
+    padding-top: 4em;
 }
 
-.movie-container:first-of-type {
+/* .movie-container:first-of-type {
     margin-top: 4em;
-}
+} */
 
 .movie-container .flex-container {
     display: flex;
@@ -206,7 +209,7 @@ form button {
     cursor: pointer;
 }
 
-#watchlist-btn {
+#add-to-watchlist-btn {
     display: flex;
     align-items: center;
 }
